APIs/googleapis.com/content/v2.1/java-client/docs/ProductStatusItemLevelIssue.md


# ProductStatusItemLevelIssue


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**applicableCountries** | **List&lt;String&gt;** | List of country codes (ISO 3166-1 alpha-2) where issue applies to the offer. |  [optional] |
|**attributeName** | **String** | The attribute&#39;s name, if the issue is caused by a single attribute. |  [optional] |
|**code** | **String** | The error code of the issue. |  [optional] |
|**description** | **String** | A short issue description in English. |  [optional] |
|**destination** | **String** | The destination the issue applies to. |  [optional] |
|**detail** | **String** | A detailed issue description in English. |  [optional] |
|**documentation** | **String** | The URL of a web page to help with resolving this issue. |  [optional] |
|**resolution** | **String** | Whether the issue can be resolved by the merchant. |  [optional] |
|**servability** | **String** | How this issue affects serving of the offer. |  [optional] |



